--- a/GroceryStoreSimulator.vcxproj
+++ b/GroceryStoreSimulator.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="NavBar.cpp" />
     <ClCompile Include="Product.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Stocks.cpp" />
     <ClCompile Include="UIManager.cpp" />
   </ItemGroup>
@@ -159,6 +160,7 @@
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="NavBar.h" />
     <ClInclude Include="Product.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="Stocks.h" />
     <ClInclude Include="UIManager.h" />
   </ItemGroup>
